    former is ignored and can be omitted (it is the ordinal number of an
    `expect` statement in a given example), but is accepted for ease of
    cutting and pasting.

  - From this release out, matchers using `to_` are preferred to using
    `should_`.  When negating a new syntax `to_` matcher, both of
    `to_not_` and `not_to` are accepted.

  - You can `require "specl.shell"` for a swathe of additional matchers
    to specify results from a `Process` object:

      a) For exit statuses, use:

           expect (shell.spawn "exit 42").to_exit (42)
           expect (shell.spawn "exit 0").to_succeed ()
           expect (shell.spawn "/bin/false").to_fail ()

      b) For checking the contents of the output stream, use:

           expect (...).to_output "exact content"
           expect (...).to_contain_output  "substring"
           expect (...).to_match_output "pattern"

      d) To require zero exit status with specified output stream
         contents:

           expect (...).to_succeed_with "exact content"
           expect (...).to_succeed_while_containing "substring"
           expect (...).to_succeed_while_matching "pattern"

      c) To check the standard error stream instead:

           expect (...).to_output_error "exact content"
           expect (...).to_contain_error "substring"
           expect (...).to_match_error "pattern"

      e) To require non-zero exit status with specified error stream
         contents:

           expect (...).to_fail_with "exact content"
           expect (...).to_fail_while_containing "substring"
           expect (...).to_fail_while_matching "pattern"

  - New experimental `specl.inprocess` module provides a way to run
    carefully written Lua programs inside the Specl process, saving a
    fork/exec each time.

** Incompatible changes:

  - Invoking `specl` with no filename arguments no longer reads specs
    from standard input.  You must explicitly pass a "-" argument to get
    that behaviour.
